--- a/src/App.css
+++ b/src/App.css
@@ -17,9 +17,9 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-rose-900 rounded-xl;
+  @apply bg-blue-900 rounded-xl;
 }
 
 .task> ::-webkit-scrollbar-thumb {
-  @apply bg-sky-500 rounded-xl;
+  @apply bg-rose-500 rounded-xl;
 }
